--- a/index.html
+++ b/index.html
@@ -28,6 +28,9 @@
     <p>
       Mer gull på <a href="https://www.instagram.com/espenpalervaag/">Espen Lervaags Instagram</a>.
     </p>
+    <p>
+      Jeg eier ikke designferdigheter! Bidra gjerne på <a href="https://github.com/gspr/vhy.no">https://github.com/gspr/vhy.no</a>.
+    </p>
   </body>
 
 </html> 
