Nytt bilde, takk til /u/Dubious_cake.

--- a/index.html
+++ b/index.html
@@ -26,6 +26,9 @@
       – Det er vanskelig å komme med en saklig kommentar, det må jeg innrømme. Du tror bare ikke at slikt er mulig, sier Lomheim til <a href="https://www.vg.no/nyheter/innenriks/i/Mg4dyK/nytt-nsb-navn-faar-spraak-slakt">VG</a>.
     </p>
     <p>
+      <img src="pics/tar-seg-ikke-5c8797.jpg" alt="Vhy though?">
+    </p>
+    <p>
       Mer gull på <a href="https://www.instagram.com/espenpalervaag/">Espen Lervaags Instagram</a>.
     </p>
     <p>
