Nytt bilde, takk til /u/Shibereddit.

--- a/index.html
+++ b/index.html
@@ -29,6 +29,9 @@
       <img src="pics/tar-seg-ikke-5c8797.jpg" alt="Vhy though?">
     </p>
     <p>
+      <img src="pics/48wzzef7ipl21.jpg" alt="Vhy though?">
+    </p>
+    <p>
       Mer gull på <a href="https://www.instagram.com/espenpalervaag/">Espen Lervaags Instagram</a>.
     </p>
     <p>
