første forsøk på design for vhy
ny til github så vet ikke om dette er riktig men jeg liker ikke vhy

--- a/index.html
+++ b/index.html
@@ -1,36 +1,53 @@
-<!DOCTYPE html>
+<!doctype html>
 <html>
   <head>
     <meta charset="UTF-8">
     <title>But vhy?!</title>
-
+    <link href="https://fonts.googleapis.com/css?family=Lato:400,900" rel="stylesheet"> 
     <style>
-      img {
-      width: 25%;
-      height: auto;
-      }
+        body {
+            font-family: Lato;
+            text-align: center;
+        }
+        .images {
+            width: 100vw;
+            display: flex;
+            flex-flow: column wrap;
+            justify-content: space-around;
+        }
+        .title {
+            font-size: 72px;
+            font-weight: 900;
+        }
+        h1 {
+            font-size: 52px;
+        }
+        p {
+            font-size: 24px;
+        }
+        img {
+            width: 30%;
+            height: auto;
+        }
     </style>
   </head>
   
   <body>
-    <p>
-	Vhy not <a href="https://www.nrk.no/norge/nsbs-navneendring-vil-koste-opp-mot-280-millioner-kroner-1.14468467">kaste bort 280 MNOK</a> på å sminke NSB?
-    </p>
-    <p>
-      <img src="pics/t0i7rzpyynl21.jpg" alt="Vhy though?">
-    </p>
-    <p>
-      <img src="pics/VA9b6F0.jpg" alt="Vhy though?">
-    </p>
-    <p>
+    <h1 class="title">BUT VHY?</h1>
+    <h1>
+	   Vhy not <a href="https://www.nrk.no/norge/nsbs-navneendring-vil-koste-opp-mot-280-millioner-kroner-1.14468467">kaste bort 280 MNOK</a> på å sminke NSB?
+    </h1>
+    <div class="images 1">
+        <img src="pics/t0i7rzpyynl21.jpg" alt="Vhy though?">
+        <img src="pics/VA9b6F0.jpg" alt="Vhy though?">
+    </div>
+    <h1>
       – Det er vanskelig å komme med en saklig kommentar, det må jeg innrømme. Du tror bare ikke at slikt er mulig, sier Lomheim til <a href="https://www.vg.no/nyheter/innenriks/i/Mg4dyK/nytt-nsb-navn-faar-spraak-slakt">VG</a>.
-    </p>
-    <p>
+    </h1>
+    <div class="images 2">
       <img src="pics/tar-seg-ikke-5c8797.jpg" alt="Vhy though?">
-    </p>
-    <p>
       <img src="pics/48wzzef7ipl21.jpg" alt="Vhy though?">
-    </p>
+    </div>
     <p>
       Mer gull på <a href="https://www.instagram.com/espenpalervaag/">Espen Lervaags Instagram</a>.
     </p>
