la til footer og farger

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
         body {
             font-family: Lato;
             text-align: center;
+            margin: 0;
         }
         .images {
             width: 100vw;
@@ -25,9 +26,20 @@
         p {
             font-size: 24px;
         }
+        a {
+            color: #67BDAA;
+        }
         img {
             width: 30%;
             height: auto;
+        }
+        .footer {
+            display: block;
+            height: 10vh;
+            width: 100vw;
+            background-color: #383E42;
+            line-height: 10vh;
+            color: white;
         }
     </style>
   </head>
@@ -51,9 +63,9 @@
     <p>
       Mer gull på <a href="https://www.instagram.com/espenpalervaag/">Espen Lervaags Instagram</a>.
     </p>
-    <p>
+    <div class="footer">
       Jeg eier ikke designferdigheter! Bidra gjerne på <a href="https://github.com/gspr/vhy.no">https://github.com/gspr/vhy.no</a>.
-    </p>
+    </div>
   </body>
 
 </html> 
