--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <body>
     <header>
       <div class="logo">
-        <img height="54px" src="/pics/why-logo.jpg" alt="">
+        <img height="54px" src="https://svgshare.com/i/Bjq.svg" alt="">
       </div>
       <div class="nav">
         <ul>
@@ -29,7 +29,7 @@
       <h1>
         Verden endrer seg. Vi endrer oss.
         <span class="d-block">
-          Vhy not <a href="https://www.nrk.no/norge/nsbs-navneendring-vil-koste-opp-mot-280-millioner-kroner-1.14468467">kaste bort 280 millioner norske kroner</a> på å sminke NSB?
+          Vhy not <a href="https://www.nrk.no/norge/nsbs-navneendring-vil-koste-opp-mot-280-millioner-kroner-1.14468467">kaste bort 280 millioner norske kroner</a> på å sminke en gris?
         </span>
       </h1>
 
