--- a/index.html
+++ b/index.html
@@ -50,8 +50,9 @@
 	   Vhy not <a href="https://www.nrk.no/norge/nsbs-navneendring-vil-koste-opp-mot-280-millioner-kroner-1.14468467">kaste bort 280 MNOK</a> på å sminke NSB?
     </h1>
     <div class="images 1">
-        <img src="pics/t0i7rzpyynl21.jpg" alt="Vhy though?">
-        <img src="pics/VA9b6F0.jpg" alt="Vhy though?">
+      <img src="pics/su4Xte3.png" alt="Vhy though?">
+      <img src="pics/t0i7rzpyynl21.jpg" alt="Vhy though?">
+      <img src="pics/VA9b6F0.jpg" alt="Vhy though?">
     </div>
     <h1>
       – Det er vanskelig å komme med en saklig kommentar, det må jeg innrømme. Du tror bare ikke at slikt er mulig, sier Lomheim til <a href="https://www.vg.no/nyheter/innenriks/i/Mg4dyK/nytt-nsb-navn-faar-spraak-slakt">VG</a>.
