--- a/index.html
+++ b/index.html
@@ -50,6 +50,7 @@
 	   Vhy not <a href="https://www.nrk.no/norge/nsbs-navneendring-vil-koste-opp-mot-280-millioner-kroner-1.14468467">kaste bort 280 MNOK</a> på å sminke NSB?
     </h1>
     <div class="images 1">
+      <img src="pics/i7r55kf9zpl21.png" alt="Vhy though?">
       <img src="pics/su4Xte3.png" alt="Vhy though?">
       <img src="pics/t0i7rzpyynl21.jpg" alt="Vhy though?">
       <img src="pics/VA9b6F0.jpg" alt="Vhy though?">
